force-app/main/default/objects/Community_User_Setting__mdt/Community_User_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Default settings for community users</description>
    <label>Community User Setting</label>
    <pluralLabel>Community User Settings</pluralLabel>
</CustomObject>