force-app/main/default/objects/Community_User_Setting__mdt/fields/Email_Encoding_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_Encoding_Key__c</fullName>
    <description>The Email Encoding Key to apply to new community users</description>
    <inlineHelpText>The Email Encoding Key to apply to new community users</inlineHelpText>
    <label>Email Encoding Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO-8859-1</fullName>
                <default>true</default>
                <label>ISO-8859-1</label>
            </value>
            <value>
                <fullName>UTF-8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>