force-app/main/default/objects/Community_User_Setting__mdt/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <label>Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>